--- a/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
+++ b/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
@@ -3,4 +3,13 @@
     height: 90%;
     border: 2px solid black;
     border-radius: 1rem;
+    position: relative;
+}
+
+.video { 
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    border-radius: 1rem;
 }
