--- a/AniPick/src/pages/MainPage/MainLayout/MainLayout.module.css
+++ b/AniPick/src/pages/MainPage/MainLayout/MainLayout.module.css
@@ -36,11 +36,55 @@
     transform: rotate(-90deg);
 }
 
-.cardPicks{
+.backgroundTransition {
+    min-width: 100vw;
+    max-height: 70vh;
+}
+
+.playButton{
+    display: flex;
+    all: unset;
+    cursor: pointer;
+    position: absolute;
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    background-color: #333;
+    text-align: center;
+    color: white;
+    font-size: 3rem;
+    font-weight: 600;
+    transition: scale 0.3s ease-in-out;
+}
+
+.playButton:hover{
+    scale: 1.1;
+}
+
+.cardPicks {
     display: grid;
     border: 2px solid black;
     height: 70vh;
     align-items: center;
     justify-items: center;
     grid-template-columns: repeat(3, 1fr);
+    transition: opacity 0.5s ease-in-out;
 }
+    .cardPicks.fade-out {
+        opacity: 0;
+    }
+
+    .cardPicks.fade-in {
+        opacity: 1;
+    }
+
+    .cardPicksBackground {
+        width: 100%;
+        height: 100%;
+        transition: opacity 0.5s ease-in-out;
+        opacity: 0;
+    }
+
+    .cardPicksBackground.show {
+        opacity: 1;
+    }
