#Changed styling of all elements inside MailLayout, Header and Footer and provided term of policy inside footer

--- a/AniPick/src/index.css
+++ b/AniPick/src/index.css
@@ -4,8 +4,9 @@
 
 body{
   margin: 0;
+  font-family: "Lexend Deca", sans-serif;
 }
 
 .active {
-  background-color: #857a7a !important;
+  color: #95b6d0 !important;
 }
