--- a/AniPick/src/pages/MainPage/Footer/Footer.module.css
+++ b/AniPick/src/pages/MainPage/Footer/Footer.module.css
@@ -1,7 +1,63 @@
 .footer{
     display: flex;
-    width: 100vw;
-    min-height: 40vh;
-    border: 2px sloid black;
-    padding: 0 1rem;
+    flex-direction: column;
+    min-height: 32vh;
+    background-color:  #202020;
+    color:  #6c6c6c;
 }
+
+.rightsContainer {
+    min-height: 10vh;
+    background-color: #1e1e1e;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.contactInfo {
+    display: flex;
+    gap: 1rem;
+}
+    .contactInfo *:hover  {
+        color: #95b6d0;
+        cursor: pointer;
+    }
+
+.termsContainer {
+    min-height: 22vh;
+    background-color: #202020;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 0.7rem;
+}
+
+.termsContainer h2 {
+    font-size: 2rem;
+}
+
+.termsContainer h2, p {
+    margin: 0;
+}
+
+.support {
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+}
+
+.support span {
+    font-weight: 600;
+    font-size: 1.5rem;
+}
+
+.support img {
+    height: 2.4rem;
+    transition: scale 0.3s ease-in-out;
+}
+    .support img:hover {
+        scale: 1.3;
+        cursor: pointer;
+    }
