--- a/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
+++ b/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
@@ -1,8 +1,6 @@
 .card {
     width: 91%;
     height: 91%;
-    border: 1rem solid black;
-    border-radius: 2rem;
     position: relative;
     cursor: pointer;
     transition: scale 0.3s ease-in-out;
@@ -13,9 +11,15 @@
     height: 100%;
     object-fit: cover;
     position: absolute;
-    border-radius: 1rem;
+    border-radius: 2rem;
+    border: 1rem solid #95b6d0;
+    z-index: 20;
 }
 
 .card:hover {
     scale: 1.1;
+}
+
+.animeTitle {
+    z-index: 10;
 }
