--- a/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
+++ b/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
@@ -16,7 +16,11 @@
     object-fit: cover;
     position: absolute;
     border-radius: 2rem;
-    border: 1rem solid #95b6d0;
+    border: 1rem solid #4d5358;
+    box-shadow: 
+    inset 0 0 10px rgba(255,255,255,0.1),
+    inset 0 0 20px rgba(255,255,255,0.1),
+    0 0 10px rgba(0,0,0,0.2);
     z-index: 20;
 }
 
@@ -37,11 +41,6 @@
     position: absolute;
     z-index: 100;
     transition: transform 0.1s ease-out, opacity 0.1s ease-out;
-}
-
-.videoBackground.hide {
-    transform: scale(0);
-    opacity: 0;
 }
 
 .animeTitle {
