--- a/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
+++ b/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
@@ -61,6 +61,40 @@
     animation: spin 0.5s ease-out;
 }
 
+.movingBorder {
+    height: 1rem;
+    width: 1rem;
+    background-image: url("../../../../assets/images/slime_data.png");
+    background-size: cover;
+    background-repeat: round;
+    position: absolute;
+    animation: moveAround 10s infinite linear;
+    z-index: 210;
+}
+
+@keyframes moveAround {
+    0% {
+        top: 0;
+        left: 0;
+    }
+    25% {
+        top: 0;
+        left: calc(100% - 1rem);
+    }
+    50% {
+        top: calc(100% - 1rem);
+        left: calc(100% - 1rem);
+    }
+    75% {
+        top: calc(100% - 1rem);
+        left: 0;
+    }
+    100% {
+        top: 0;
+        left: 0;
+    }
+}
+
 @keyframes spin {
     from {
         transform: rotate(0deg);
