--- a/AniPick/src/pages/MainPage/MainLayout/MainLayout.module.css
+++ b/AniPick/src/pages/MainPage/MainLayout/MainLayout.module.css
@@ -25,7 +25,7 @@
     min-width: 79vw;
     height: 20vh;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     z-index: 200;
 }
@@ -37,6 +37,7 @@
     background: #494949;
     border-radius: 2rem;
     padding: 1rem;
+    margin-left: 25vh;
 }
 
 .backgroundTransition {
