--- a/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
+++ b/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
@@ -51,6 +51,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     gap: 0.5rem;
     color: white;
     font-size: 2.5rem;
