#Added functionality to send opening choosen by user divided by year

--- a/AniPick/src/pages/MainPage/MainLayout/MainLayout.module.css
+++ b/AniPick/src/pages/MainPage/MainLayout/MainLayout.module.css
@@ -92,12 +92,21 @@
         opacity: 1;
     }
 
-@-webkit-keyframes backgroundScroll {
-    from {background-position: 0 0;}
-    to {background-position: -1800px 0;}
+.endingCharacterContener {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100%;
 }
 
-@keyframes backgroundScroll {
-    from {background-position: 0 0;}
-    to {background-position: -1800px 0;}
+.endingCharacterContener  .backgroundTransition{
+    z-index: 10;
+    min-width: auto;
+    cursor: pointer;
+    transition: scale 0.3s ease-in-out;
+}
+
+.endingCharacterContener  .backgroundTransition:hover{
+    scale: 1.1;
 }
