#Fullfilled content for account details

--- a/AniPick/src/pages/UserPanel/UserPanel.module.css
+++ b/AniPick/src/pages/UserPanel/UserPanel.module.css
@@ -21,3 +21,9 @@
     color: #1976d2;
     border-radius: 1rem;
 }
+
+.passwordsContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
