#Modified pages to be responsive for mobile screen sizes

--- a/AniPick/src/pages/AllOpenings/AllOpenings.module.css
+++ b/AniPick/src/pages/AllOpenings/AllOpenings.module.css
@@ -21,3 +21,17 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
     text-align: center;
 }
+
+@media only screen and (max-width: 770px) { 
+    .allOpeningsContainer {
+        max-width: 60ch;
+        margin-top: 6svh;
+        padding: 0;
+    }
+
+    .yearAccordion {
+        width: 90%;
+        vertical-align: middle;
+        margin: auto;
+    }
+}
