--- a/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
+++ b/AniPick/src/pages/MainPage/MainLayout/AnimeCard/AnimeCard.module.css
@@ -104,3 +104,10 @@
         transform: rotate(360deg);
     }
 }
+
+@media only screen and (max-width: 770px) {
+    .animeTitle {
+        font-size: 1.4rem;
+        -webkit-text-stroke: 0.1rem black;
+    }
+}
