--- a/AniPick/src/pages/MainPage/MainLayout/YearDisplay/YearDisplay.module.css
+++ b/AniPick/src/pages/MainPage/MainLayout/YearDisplay/YearDisplay.module.css
@@ -16,3 +16,9 @@
     border-radius: 2rem;
     padding: 1rem;
 }
+
+@media only screen and (max-width: 770px) { 
+    .yearNumber {
+        font-size: 2rem;
+    }
+}
