--- a/AniPick/src/pages/UserPanel/UserPanel.module.css
+++ b/AniPick/src/pages/UserPanel/UserPanel.module.css
@@ -27,3 +27,21 @@
     justify-content: center;
     align-items: center;
 }
+
+@media only screen and (max-width: 1170px) { 
+    .panelAccordion {
+        max-width: 20rem;
+    }
+}
+
+@media only screen and (max-width: 750px) { 
+    .panelAccordion {
+        max-width: 10rem;
+    }
+}
+
+@media only screen and (max-width: 390px) { 
+    .panelAccordion {
+        max-width: 6rem;
+    }
+}
